[package]
name = "crawler"
version = "0.1.0"
authors = ["3lpsy <8757851+3lpsy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
url = "2.1.1"
# should reqwuest use full features
reqwest = { version = "0.10", features = ["json", "gzip", "cookies"] }
tokio = { version = "0.2", features = ["full"] }